styles/base.css
  body {
    font-family: "Arial", sans-serif; ;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
  }

  header {
    background-color: #1d4d72;
    text-align: center;
    width: 600px;
    margin: 0 auto;
    height: 125px;
    display: flex;
    flex-direction: row;  
    align-items: center;
  }

  header h1{
    margin: 0;  
    line-height: 125px; 
    margin-left: 10px;

  }

  header img {
    float: left;  
    margin-right: 10px;
    padding-left: 100px;
  }

  nav a:hover {
    color: #1d4d72;
  }

  nav {
    background-color: black;
    color: white; 
    width: 600px;
    margin: 0 auto; 
    display: flex;
    justify-content: space-between; /* Distribute items horizontally */
    align-items: center;
    flex-wrap: wrap; /* Allow items to wrap to the next row */
  }
 
  nav ul {
    list-style: none;
    padding: 0;
    display: flex;
    margin: 0;
  }

  nav li {
    font-size: 18px;  
    margin-bottom: 0 10px;
    
  }
  
  nav a {
    text-decoration: none;
    color: white; 
    padding: 10px 20px; 
    display: block;  
    text-align: center;
  }

  
  h1 {
    color: #fff;
    font-size: 1.7rem;
    margin-left: 1rem;
    font-weight: normal;
  }

  main {
    max-width: 580px;  
    margin: 0 auto;  
    padding: 20px;  
    display: grid;  
    grid-template-columns: 2fr 1fr; /* Mostrar en dos columnas en la vista normal */
    gap: 20px; 
  }
  
    
  .card {
    border: 1px solid #ccc;
    border-radius: 10px;
    padding: 0px;
    max-width: 100%;
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);

  }
  
  
  .card h3 {
    font-size: 1.2em;
    background-color: #1d4d72;  
    border-radius: 10px;
    color: white;  
    width: 100%;  
    height: 50px;  
    text-align: center;  
    line-height: 30px;   
    margin: 0;  
    padding: 0;  
    display: flex; 
    align-items: center;  
    justify-content: center;  
  }
  
  
  .card ul {
    list-style-type: decimal;  
    padding-left: 40px;;
  }
  
  .card ul li {
    margin-bottom: 5px;
  }
  
  main h2 {
    width: 100%;  
    position: relative; 
    margin: 0 auto;  
    text-align: center;
  }
   
  .information {
    border: 1px solid #ccc;
    border-radius: 10px;
    padding: 0px;
    width: 200px;
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);

 

  }
  .information p {
    text-align: center; 
    width: 100%;
  }

  footer {
    width: 600px; 
    background-color:#1d4d72;  
    padding: 10px 0;  
    text-align: center;
    color: #fff; 
   
  }
  footer p {
    margin: 0;  
    line-height: 1.8;  
  }

  footer p img {
    vertical-align: middle; 
    margin-left: 5px; 
    
  }

  #lastModified {
    color: #fcfbf5;   
  }

  @media screen and (max-width: 767px) {
    main {
      grid-template-columns: 1fr; /* Volver a una sola columna en la vista móvil */
      padding: 10px;
    }
  
    .card {
      padding: 10px;
    }
    .footer-container {
      display: flex;
      align-items: center;
    }
    
    .footer-container p {
      margin: 0; /* Elimina el margen predeterminado de los párrafos */
      padding-right: 10px; /* Agrega espacio entre los elementos */
    }
    
    .footer-container img {
      vertical-align: middle; /* Alinea verticalmente la imagen en el centro */
    }
  }
  
  
  
  
  
  


 
  
 

